--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ h2 {
     color: #aaa;
 }
 
+.txt-type > .txt {
+    border-right: 0.2rem solid #777;
+}
+
 @media(min-width: 1200px){
     h1 {
         font-size: 4rem;
